# launch-cert-tool

./: .gitignore  .secrets.baseline  .tool-versions  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: draft-release.yaml  label-pull-request.yaml  python-tests.yaml  release-pypi.yaml  validate-branch-name.yaml
docs/: ide-vscode.md  pypi-configuration.md  release-workflow.md
src/hello/: hello.py
test/integration/: conftest.py  test_badssl_com.py
test/unit/: test_cli.py  test_hello.py  test_parser.py  test_validate.py
